odevzdani/tests/invalid_sem/com/com05.java
class Main {
    static String hello() {
        return "Hello";
    }
    static void run() {
        double b = hello();
    }
}
